# vector-index-bench

./: pom.xml
src/main/java/ru/mcashesha/: IVFIndexBuildBenchmarks.java  IVFIndexSearchBenchmarks.java  VectorIndexBenchmark.java
src/main/java/ru/mcashesha/data/: EmbeddingCsvLoader.java
src/main/java/ru/mcashesha/ivf/: IVFIndex.java  IVFIndexFlat.java
src/main/java/ru/mcashesha/kmeans/: HierarchicalKMeans.java  KMeans.java  LloydKMeans.java  MiniBatchKMeans.java
src/main/java/ru/mcashesha/metrics/: Metric.java  Scalar.java  SimSIMD.java  VectorAPI.java
src/main/native/: CMakeLists.txt  ru_mcashesha_metrics_SimSIMD.h  simsimd_jni.c
